src/objects/appsolutely__Creditsafe_Company_Report_Full__c.object
<CustomObject>
    <description>A detailed report about a company.</description>
    <fields>
        <fullName>appsolutely__Beneficiary_Owners_City__c</fullName>
        <description>Owner city.</description>
        <label>Beneficiary Owners City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Beneficiary_Owners_Country__c</fullName>
        <description>Owner country.</description>
        <label>Beneficiary Owners Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Beneficiary_Owners_Name__c</fullName>
        <description>Owner Name.</description>
        <label>Beneficiary Owners Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Beneficiary_Owners_Postal_Code__c</fullName>
        <description>Owner postal code.</description>
        <label>Beneficiary Owners Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Beneficiary_Owners_Share_Percent__c</fullName>
        <description>The percentage of shares owned.</description>
        <label>Beneficiary Owners Share Percent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Branch_Number__c</fullName>
        <description>The branch number.</description>
        <label>Branch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Business_Dossier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>[DEPRECATED] Use the lookup from Business Dossier to Creditsafe Company Report instead.</description>
        <label>Business Dossier</label>
        <referenceTo>appsolutely__Business_Dossier__c</referenceTo>
        <relationshipLabel>Creditsafe Company Reports</relationshipLabel>
        <relationshipName>Creditsafe_Company_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>appsolutely__Business_Name__c</fullName>
        <description>The trading name of business.</description>
        <label>Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Business_Purpose__c</fullName>
        <description>A text description of the companies business purpose in German language.</description>
        <label>Business Purpose</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__Commercial_Register_City__c</fullName>
        <description>The city in which the company is registered.</description>
        <label>Commercial Register City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Commercial_Register_Zip__c</fullName>
        <description>The postal code in which the company is registered.</description>
        <label>Commercial Register Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Company_Id__c</fullName>
        <description>Company’s Id.</description>
        <externalId>true</externalId>
        <label>Company Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Company_Registration_Number__c</fullName>
        <description>Official registration number.</description>
        <externalId>true</externalId>
        <label>Company Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Company_Status_Description__c</fullName>
        <description>The description of the status.</description>
        <label>Company Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Company_Status__c</fullName>
        <description>The status of the company.</description>
        <label>Company Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Company_Type__c</fullName>
        <description>This indicates if the company is a branch or headquarter.</description>
        <label>Company Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Complementary_Company__c</fullName>
        <description>Details the complementary company.</description>
        <label>Complementary Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Country__c</fullName>
        <description>Country where the company is registered.</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Credit_Rating_Common_Description__c</fullName>
        <description>Description of the credit score.</description>
        <label>Credit Rating Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__Credit_Rating_Common_Value__c</fullName>
        <description>Value of the credit score.</description>
        <label>Credit Rating Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Credit_Rating_Limit__c</fullName>
        <description>Amount of advisable credit.</description>
        <label>Credit Rating Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Credit_Rating_Provider_Description__c</fullName>
        <description>Provider description.</description>
        <label>Credit Rating Provider Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__Credit_Rating_Provider_Value_Max__c</fullName>
        <description>Max value.</description>
        <label>Maximum Value Credit Rating Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Credit_Rating_Provider_Value_Min__c</fullName>
        <description>Min value.</description>
        <label>Minimal Value Credit Rating Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Credit_Rating_Provider_Value__c</fullName>
        <description>Value.</description>
        <label>Credit Rating Provider Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Current_CR_Common_Description__c</fullName>
        <description>Description of the credit rating score.</description>
        <label>Current Credit Rating Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__Current_CR_Common_Value__c</fullName>
        <description>Value of the credit score.</description>
        <label>Current Credit Rating Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Current_CR_Limit__c</fullName>
        <description>Amount of advisable credit.</description>
        <label>Current Credit Rating Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Current_CR_Provider_Description__c</fullName>
        <description>Provider description.</description>
        <label>Current Provider Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__Current_CR_Provider_Value_Max__c</fullName>
        <description>Max value.</description>
        <label>Maximum Current Provider Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Current_CR_Provider_Value_Min__c</fullName>
        <description>Min value.</description>
        <label>Minimal Current Provider Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Current_CR_Provider_Value__c</fullName>
        <description>Value.</description>
        <label>Current Provider Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Current_Rating_Max_Value__c</fullName>
        <description>Max value.</description>
        <label>Current Rating Maximum Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Current_Rating_Min_Value__c</fullName>
        <description>Min value</description>
        <label>Current Rating Minimal Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Current_Rating_Value__c</fullName>
        <description>Value</description>
        <label>Current Rating Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__DE_Negative_Rating__c</fullName>
        <description>The negative credit rating if it exists for a company.</description>
        <label>DE Negative Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Date_Of_Cessation_Trading__c</fullName>
        <description>Date when the company has stopped trading.</description>
        <label>Date Of Cessation Trading</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Date_Of_Insolvency__c</fullName>
        <description>Date of insolvency application.</description>
        <label>Date Of Insolvency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Date_Of_Legal_Form__c</fullName>
        <description>The date the company changed its legal form.</description>
        <label>Date Of Legal Form</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Dateof_Company_Registration__c</fullName>
        <description>The date the company was registered.</description>
        <label>Date of Company Registration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>appsolutely__Dateof_Starting_Operations__c</fullName>
        <description>The date the company began trading.</description>
        <label>Date of Starting Operations</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>appsolutely__Day_Sales_Outstanding_Lower__c</fullName>
        <description>The lower value for the company ranked 1/4 divided by industry code.</description>
        <label>Day Sales Outstanding Lower</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Day_Sales_Outstanding_Median__c</fullName>
        <description>The middle value of the estimated number of days taken to pay the business.</description>
        <label>Day Sales Outstanding Median</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Day_Sales_Outstanding_Upper__c</fullName>
        <description>The higher value for the company ranked 3/4 divided by industry code.</description>
        <label>Day Sales Outstanding Upper</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Day_Sales_Outstanding__c</fullName>
        <description>The estimated number of days taken to pay the business.</description>
        <label>Day Sales Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Exporter__c</fullName>
        <description>Indicates if a company exports into foreign countries.</description>
        <label>Exporter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Fax_Number__c</fullName>
        <description>The Fax number of the business.</description>
        <label>Fax Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Financials_Quality__c</fullName>
        <description>The quality standard of the accounts data.</description>
        <label>Financials Quality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Has_Bankruptcy__c</fullName>
        <description>Indicates if there is bankruptcy information for the company.</description>
        <label>Has Bankruptcy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Image_Account_Document_Type__c</fullName>
        <description>The document type.</description>
        <label>Image Account Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Image_Account_End_Date__c</fullName>
        <description>Financial statement date end.</description>
        <label>Image Account End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Image_Account_Financials_Type__c</fullName>
        <description>The financials type.  Is one of: 0 = Individual, 1 = Consolidated.</description>
        <label>Image Account Financials Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Image_Account_Published_Date__c</fullName>
        <description>Financial statement date published at German „Bundesanzeiger”.</description>
        <label>Image Account Published Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Image_Account_Serial_Number__c</fullName>
        <description>The identification number of the image document.</description>
        <externalId>true</externalId>
        <label>Image Account Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Image_Account_Start_Date__c</fullName>
        <description>Financial statement date start.</description>
        <label>Image Account Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Importer__c</fullName>
        <description>Indicates if a company imports from foreign countries.</description>
        <label>Importer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Industry_Average_Credit_Limit__c</fullName>
        <description>The average credit limit for the company’s activity code.</description>
        <label>Industry Average Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Industry_Average_Credit_Rating__c</fullName>
        <description>The average credit rating for the company’s activity code.</description>
        <label>Industry Average Credit Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Industry_Average_Day_Sales_Outstanding__c</fullName>
        <description>The number of days it takes this company to collect their debts.</description>
        <label>Industry Average Day Sales Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Industry_Average_Payment_Expectation_Day__c</fullName>
        <description>This is the guideline expectations, based upon our analysis, as to this company’s payment behaviour.</description>
        <label>Industry Average Payment Expectation Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Issued_Share_Capital__c</fullName>
        <description>This is the issued and paid share capital from shareholders.</description>
        <label>Issued Share Capital</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Language__c</fullName>
        <description>ISO 639-1 notation language that the report is returned in.</description>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Latest_Shareholders_Equity_Figure__c</fullName>
        <description>The total of Called up Share Capital, Revenue Reserves, Share Premium and Other Reserves.</description>
        <label>Latest Shareholders Equity Figure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Latest_Turnover_Figure__c</fullName>
        <description>Latest value for the previous year’s Net Sales.</description>
        <label>Latest Turnover Figure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Legal_Form_Code__c</fullName>
        <description>Description code.</description>
        <label>Legal Form Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Legal_Form_Description__c</fullName>
        <description>Legal Form Description</description>
        <label>Legal Form Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Legal_Form_Value__c</fullName>
        <description>Value.</description>
        <label>Legal Form Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Main_Activity_Classification__c</fullName>
        <description>Activity classification.</description>
        <label>Main Activity Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Main_Activity_Code__c</fullName>
        <description>Activity code of the company, and is used to identify the sector.</description>
        <label>Main Activity Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Main_Activity_Description__c</fullName>
        <description>Activity description relating to the activity code.</description>
        <label>Main Activity Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__Miscellaneous_Turnover_Range__c</fullName>
        <description>A banding that gives an estimation of the company’s turnover.</description>
        <label>Miscellaneous Turnover Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__NL_Negative_Rating__c</fullName>
        <description>The negative credit rating if it exists for a NL company.</description>
        <label>NL Negative Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Nominal_Share_Capital__c</fullName>
        <description>The maximum amount of share capital the company is authorised by its constitutional documents to issue to shareholders.</description>
        <label>Nominal Share Capital</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Number__c</fullName>
        <description>Number reserved for future use with the Creditsafe Global number.</description>
        <label>Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Order_Number__c</fullName>
        <description>Unique Creditsafe identifier for this specific order request.</description>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Payment_Expectation_Days_Lower__c</fullName>
        <description>The lower value for the company ranked 1/4 divided by industry code.</description>
        <label>Payment Expectation Days Lower</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Payment_Expectation_Days_Median__c</fullName>
        <description>The middle value of the estimated number of days taken to pay the business.</description>
        <label>Payment Expectation Days Median</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Payment_Expectation_Days_Upper__c</fullName>
        <description>The higher value for the company ranked 3/4 divided by industry code.</description>
        <label>Payment Expectation Days Upper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Payment_Expectation_Days__c</fullName>
        <description>The estimated number of days until payment from the business.</description>
        <label>Payment Expectation Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appsolutely__Premise_Type__c</fullName>
        <description>The type of premises this business is run from for example house or office ect.</description>
        <label>Premise Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Previous_CR_Common_Description__c</fullName>
        <description>Description of the credit score.</description>
        <label>Previous Credit Rating Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__Previous_CR_Common_Value__c</fullName>
        <description>Value of the credit score.</description>
        <label>Previous Credit Rating Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Previous_CR_Limit__c</fullName>
        <description>Amount of advisable credit.</description>
        <label>Previous Credit Rating Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Previous_CR_Provider_Description__c</fullName>
        <description>Provider description.</description>
        <label>Previous Provider Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__Previous_CR_Provider_Value_Max__c</fullName>
        <description>Max value.</description>
        <label>Previous Provider Maximum Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Previous_CR_Provider_Value_Min__c</fullName>
        <description>Min value.</description>
        <label>Previous Provider Minimal Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Previous_CR_Provider_Value__c</fullName>
        <description>Value.</description>
        <label>Previous Provider Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Previous_Rating_Max_Value__c</fullName>
        <description>Max Value</description>
        <label>Previous Rating Maximum Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Previous_Rating_Min_Value__c</fullName>
        <description>Min value</description>
        <label>Previous Rating Minimum Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Previous_Rating_Value__c</fullName>
        <description>Value</description>
        <label>Previous Rating Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Principal_Activity_Code__c</fullName>
        <description>Code</description>
        <label>Principal Activity Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Principal_Activity_Description__c</fullName>
        <description>Description</description>
        <label>Principal Activity Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Principal_Activity_Value__c</fullName>
        <description>Value.</description>
        <label>Principal Activity Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Registered_Company_Name__c</fullName>
        <description>Registered company name.</description>
        <label>Registered Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Rsin_Number__c</fullName>
        <description>The Legal Entities and Partnerships Information Number.</description>
        <externalId>true</externalId>
        <label>Rsin Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Small_Office__c</fullName>
        <description>(Small office/Home Company) This signifies if a business is trading from a consumers address.  0 = No, 1 = Yes, NULL = no data available.</description>
        <label>Small Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Suspension_Of_Payments_Mora__c</fullName>
        <description>Indicates if the company has a suspensions of payments.</description>
        <label>Suspension Of Payments Mora</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Trustee_City__c</fullName>
        <description>City where trustee is located.</description>
        <label>Trustee City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Trustee_Code__c</fullName>
        <description>Name and ZIP code of trustee.</description>
        <label>Trustee Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Trustee_Email_Address__c</fullName>
        <description>Email address of the trustee.</description>
        <label>Trustee Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>appsolutely__Trustee_Fax_Number__c</fullName>
        <description>Fax number trustee.</description>
        <label>Trustee Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>appsolutely__Trustee_First_Name__c</fullName>
        <description>First name trustee.</description>
        <label>Trustee First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Trustee_Last_Name__c</fullName>
        <description>Last name trustee.</description>
        <label>Trustee Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Trustee_Name__c</fullName>
        <description>Name of the trustee in charge of the insolvency.</description>
        <label>Trustee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Trustee_Telephone_Number__c</fullName>
        <description>Phone number trustee.</description>
        <label>Trustee Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>appsolutely__Trustee_Title__c</fullName>
        <description>Title trustee.</description>
        <label>Trustee Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Turnover_Range_Year__c</fullName>
        <description>Turnover year.</description>
        <label>Turnover Range Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Turnover_Ranges__c</fullName>
        <description>Turnover range.</description>
        <label>Turnover Ranges</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__VAT_Registration_Number__c</fullName>
        <description>Local VAT Number.</description>
        <externalId>true</externalId>
        <label>VAT Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Creditsafe Company Report</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Creditsafe Company Report Full Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creditsafe Company Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>